<resources>
    <string name="app_name">Project Manager</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_identity">Identity</string>
    <string name="et_hint_name">Name</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u>Terms &amp; Condition</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_name">Please enter name.</string>
    <string name="err_msg_enter_identity">Please enter identity.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and Confirm Password are not matched.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you an email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password!\"</string>
    <string name="register_success">You are registered successfully!</string>
    <string name="title_complete_profile">PROFILE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="hint_profile_name">name</string>
    <string name="hint_profile_key">key</string>
    <string name="hint_profile_info">info</string>
    <string name="home"><u>Home</u></string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>

    <string name="yyyy">yyyy</string>
    <string name="mm">mm</string>
    <string name="sl">/</string>
    <string name="dd">dd</string>
    <string name="project_description">project description</string>
    <string name="project_deadline">project deadline</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="submit">submit</string>
    <string name="input_project_description">input project description</string>
    <string name="project_name">project name</string>
    <string name="input_project_name">input project name</string>
    <string name="create_project">create project</string>
    <string name="add_task">add task</string>
    <string name="task_name">task name</string>
    <string name="input_task_name">input task name</string>
    <string name="input_task_description">input task description</string>
    <string name="task_description">task description</string>
    <string name="task_deadline">task deadline</string>
    <string name="input_task_member_name">input task member name</string>
    <string name="finish">finish</string>
    <string name="back">back</string>
    <string name="find_ongoing">ongoing</string>
    <string name="find_complete">complete</string>
    <string name="number_of_task">number of task</string>
</resources>