<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="horizontal"

        tools:ignore="PxUsage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:text="@string/input_project_name"
            />
        <!--        android:text="@string/input_project_name"-->

        <EditText
            android:id="@+id/add_taskp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/project_name"
            android:inputType="text"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="horizontal"

        tools:ignore="PxUsage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:text="@string/input_task_name"
            />
        <!--        android:text="@string/input_project_name"-->

        <EditText
            android:id="@+id/add_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/task_name"
            android:inputType="text"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:text="@string/input_task_member_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/input_task_member_name"
            android:id="@+id/task_member_name"
            tools:ignore="Autofill,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="horizontal"
        tools:ignore="PxUsage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:text="@string/task_deadline" />

        <EditText
            android:id="@+id/TDD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dd"
            android:inputType="date"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sl" />

        <EditText
            android:id="@+id/TMM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mm"
            android:inputType="date"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sl" />

        <EditText
            android:id="@+id/TYYYY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/yyyy"
            android:inputType="date"
            tools:ignore="Autofill" />



    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_task_submit"
        android:text="@string/submit" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finish"
        android:text="@string/finish"/>





</LinearLayout>